sourcing openapi.yaml from githit openapi project
